--- a/assets/cadastro.html
+++ b/assets/cadastro.html
@@ -10,7 +10,7 @@
     <section class="login-container">
         <div class="login-card">
             <div class="login-icon">
-                <img src="imgs/user.svg" alt="user-icon">
+                <img src="imgs/cadastro.svg" alt="cadastro-icon">
             </div>
             <form>
                 <div class="input-field">
@@ -18,21 +18,20 @@
                 </div>
                 <div class="input-field">
                     <input type="password" required placeholder="Senha" id="password"/>
-                    <img src="imgs/ocultar.png" alt="Ocultar Senha" id="togglePassword"/>
                 </div>
-                <div class="options">
-                    <a href="#">Esqueceu a Senha?</a>
+                <div class="input-field">
+                    <input type="password" required placeholder="Confirme a Senha" id="password"/>
                 </div>
-
-                <button type="submit">Entrar</button>
-                <hr class="hr1">
-                <button type="button"><a href="cadastro.html">Criar Conta</button></a>
+                <button type="submit">Criar Conta</button>
             </form>
             </div>
+         
+        
     </section>
-    <div class="container-decoration">
-        <img src="imgs/teste.png" alt="decoration" class="decoration-close"/>
-        <a href="dashboard.html"><img src="imgs/fechar.svg" alt="botaofechar" class="closebutton"></a>
+
+    <div class="container-decoration-back">
+        <img src="imgs/teste.png" alt="decoration" class="decoration-back"/>
+        <a href="login.html"><img src="imgs/voltar.svg" alt="backbutton" class="backbutton"></a>
     </div>
     <script src="js/olho-magico.js"></script>
 </body>
