--- a/assets/dashboard.html
+++ b/assets/dashboard.html
@@ -16,7 +16,7 @@
                     <img src="imgs/algemas.svg" alt="icone-algemas" class="algemasicone">
                 </li>
                 <li>
-                    <a href="dashboard.html"><span>ESCRAVIZADORES</span></a>
+                    <a href="dashboard.html" class="menu-ativo"><span>ESCRAVIZADORES</span></a>
                 </li>
                 </div>
                 <div class="menu-2">
