--- a/assets/criador.html
+++ b/assets/criador.html
@@ -16,7 +16,7 @@
                     <img src="imgs/algemas.svg" alt="icone-algemas" class="algemasicone">
                 </li>
                 <li>
-                    <a href="dashboard.html"><span>ESCRAVIZADORES</span></a>
+                    <a href="home.html"><span>ESCRAVIZADORES</span></a>
                 </li>
                 </div>
                 <div class="menu-2">
@@ -31,7 +31,7 @@
             <div class="container-creator">
                 <div><img src="imgs/creator.svg" alt="creator-picture"></div>
                 <span class="nome-criador">Luciano</span>
-                <div><img src="icons/github.svg" alt="github-icon"><img src="icons/instagram.svg" alt="instagram-icon"></div>
+                <div class="icons-creator"><img src="icons/github.svg" alt="github-icon"><img src="icons/instagram.svg" alt="instagram-icon"></div>
             </div>
         </div>
     </div>
