--- a/assets/login.html
+++ b/assets/login.html
@@ -32,7 +32,7 @@
     </section>
     <div class="container-decoration">
         <img src="imgs/teste.png" alt="decoration" class="decoration-close"/>
-        <a href="dashboard.html"><img src="imgs/fechar.svg" alt="botaofechar" class="closebutton"></a>
+        <a href="home.html"><img src="imgs/fechar.svg" alt="botaofechar" class="closebutton"></a>
     </div>
     <script src="js/olho-magico.js"></script>
 </body>
