--- a/assets/home.html
+++ b/assets/home.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dashboard</title>
-    <link rel="stylesheet" href="/assets/pages/dashboard/dashboard.css">
+    <title>EscravizadorAQUI</title>
+    <link rel="stylesheet" href="/assets/pages/home/home.css">
 </head>
 <body>
     <div class="dashboard">
@@ -16,7 +16,7 @@
                     <img src="imgs/algemas.svg" alt="icone-algemas" class="algemasicone">
                 </li>
                 <li>
-                    <a href="dashboard.html" class="menu-ativo"><span>ESCRAVIZADORES</span></a>
+                    <a href="home.html" class="menu-ativo"><span>ESCRAVIZADORES</span></a>
                 </li>
                 </div>
                 <div class="menu-2">
