--- a/assets/escravizadores.html
+++ b/assets/escravizadores.html
@@ -1,1 +1,35 @@
-xx
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8"> <!-- Define a codificação de caracteres como UTF-8 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Define a viewport para tornar a página responsiva em dispositivos móveis -->
+    <title>dashboard</title> <!-- Define o título da página exibido na aba do navegador -->
+    <link rel="stylesheet" href="/assets/pages/criador/criador.css"> <!-- Vincula o arquivo CSS para o estilo da página -->
+</head>
+<body>
+    <!-- Início do contêiner principal do dashboard -->
+    <div class="dashboard">
+        <!-- Contêiner do conteúdo principal -->
+        <div class="containerdash">
+            <!-- Menu de navegação -->
+            <div class="container-menu">
+                <ul class="menu">
+                    <!-- Menu de navegação à esquerda -->
+                    <div class="menu-1">
+                        <li>
+                            <img src="imgs/algemas.svg" alt="icone-algemas" class="algemasicone"> <!-- Ícone de algemas -->
+                        </li>
+                        <li>
+                            <a href="home.html"><span>ESCRAVIZADORES</span></a> <!-- Link para a página "ESCRAVIZADORES" -->
+                        </li>
+                    </div>
+                    <!-- Menu de navegação à direita -->
+                    <div class="menu-2">
+                        <li>
+                            <a href="conzientizese.html"><span>CONCIENTIZE-SE</span></a> <!-- Link para a página "CONCIENTIZE-SE" -->
+                        </li>
+                        <li>
+                            <a href="criador.html" class="menu-ativo"><span>CRIADOR</span></a> <!-- Link para a página "CRIADOR", com classe ativa -->
+                        </li>
+                    </div>
+                </ul>
