--- a/assets/escravizadores.html
+++ b/assets/escravizadores.html
@@ -33,3 +33,13 @@
                         </li>
                     </div>
                 </ul>
+
+                
+  <!-- Imagem decorativa e botão de usuário -->
+        <div class="container-decoration-pages">
+            <img src="imgs/teste.png" alt="decoration" class="decoration-close"/> <!-- Imagem decorativa -->
+            <a href="login.html"><img src="imgs/user.svg" alt="botaousuario" class="userbutton"></a> <!-- Ícone de usuário, link para login -->
+        </div>
+    </div>
+</body>
+</html>
