--- a/assets/criador.html
+++ b/assets/criador.html
@@ -41,6 +41,12 @@
                     <div class="icons-creator">
                         <img src="icons/github.svg" alt="github-icon"> <!-- Ícone do GitHub -->
                         <img src="icons/instagram.svg" alt="instagram-icon"> <!-- Ícone do Instagram -->
+                    <div><img src="imgs/creator2.png" alt="creator-picture"> <!-- Imagem do criador -->
+                    </div>
+                    <span class="nome-criador">Francesca</span> <!-- Nome do criador -->
+                    <div class="icons-creator">
+                        <img src="icons/github.svg" alt="github-icon"> <!-- Ícone do GitHub -->
+                        <img src="icons/instagram.svg" alt="instagram-icon"> <!-- Ícone do Instagram -->
                     </div>
                 </div>
             </div>
