--- a/assets/escravizadores.html
+++ b/assets/escravizadores.html
@@ -20,7 +20,7 @@
                             <img src="imgs/algemas.svg" alt="icone-algemas" class="algemasicone"> <!-- Ícone de algemas -->
                         </li>
                         <li>
-                            <a href="home.html"><span>ESCRAVIZADORES</span></a> <!-- Link para a página "ESCRAVIZADORES" -->
+                            <a href="home.html"><span>Início</span></a> <!-- Link para a página "Início" -->
                         </li>
                     </div>
                     <!-- Menu de navegação à direita -->
@@ -39,7 +39,6 @@
                     <thead>
                         <tr>
                             <th>ID</th>
-                            <th>Ano da ação fiscal</th>
                             <th>Ano da ação fiscal</th>
                             <th>UF</th>
                             <th>Empregador</th>
