--- a/assets/escravizadores.html
+++ b/assets/escravizadores.html
@@ -26,7 +26,7 @@
                     <!-- Menu de navegação à direita -->
                     <div class="menu-2">
                         <li>
-                            <a href="conzientizese.html"><span>CONCIENTIZE-SE</span></a> <!-- Link para a página "CONCIENTIZE-SE" -->
+                            <a href="conzientizese.html"><span>CONSCIENTIZE-SE</span></a> <!-- Link para a página "CONCIENTIZE-SE" -->
                         </li>
                         <li>
                             <a href="criador.html" class="menu-ativo"><span>CRIADOR</span></a> <!-- Link para a página "CRIADOR", com classe ativa -->
