--- a/assets/conzientizese.html
+++ b/assets/conzientizese.html
@@ -40,7 +40,7 @@
                     <div class="menu-2">
                         <li>
                             <!-- Link para a página "CONCIENTIZE-SE", com a classe 'menu-ativo' para destacar a página atual -->
-                            <a href="conzientizese.html" class="menu-ativo"><span>CONCIENTIZE-SE</span></a>
+                            <a href="conzientizese.html" class="menu-ativo"><span>CONSCIENTIZE-SE</span></a>
                         </li>
                         <li>
                             <!-- Link para a página "CRIADOR" -->
