--- a/assets/home.html
+++ b/assets/home.html
@@ -40,7 +40,7 @@
                     <div class="menu-2">
                         <li>
                             <!-- Link para a página de conscientização -->
-                            <a href="conzientizese.html"><span>CONCIENTIZE-SE</span></a>
+                            <a href="conzientizese.html"><span>CONSCIENTIZE-SE</span></a>
                         </li>
                         <li>
                             <!-- Link para a página do criador -->
