--- a/assets/home.html
+++ b/assets/home.html
@@ -32,12 +32,15 @@
                         </li>
                         <li>
                             <!-- Link para a página inicial (home) com a classe "menu-ativo" indicando a página ativa -->
-                            <a href="home.html" class="menu-ativo"><span>ESCRAVIZADORES</span></a>
+                            <a href="home.html" class="menu-ativo"><span>Início</span></a>
                         </li>
                     </div>
                     
                     <!-- Menu à direita, contendo mais links -->
                     <div class="menu-2">
+                        <li>
+                            <!-- Link para a página de escravizadores -->
+                            <a href="escravziadores.html"><span>ESCRAVIZADORES</span></a>
                         <li>
                             <!-- Link para a página de conscientização -->
                             <a href="conzientizese.html"><span>CONSCIENTIZE-SE</span></a>
