--- a/assets/home.html
+++ b/assets/home.html
@@ -32,7 +32,7 @@
                         </li>
                         <li>
                             <!-- Link para a página inicial (home) com a classe "menu-ativo" indicando a página ativa -->
-                            <a href="home.html" class="menu-ativo"><span>Início</span></a>
+                            <a href="home.html" class="menu-ativo"><span>INÍCIO</span></a>
                         </li>
                     </div>
                     
