--- a/assets/escravizadores.html
+++ b/assets/escravizadores.html
@@ -20,7 +20,7 @@
                             <img src="imgs/algemas.svg" alt="icone-algemas" class="algemasicone"> <!-- Ícone de algemas -->
                         </li>
                         <li>
-                            <a href="home.html"><span>Início</span></a> <!-- Link para a página "Início" -->
+                            <a href="home.html"><span>INÍCIO</span></a> <!-- Link para a página "Início" -->
                         </li>
                     </div>
                     <!-- Menu de navegação à direita -->
