--- a/assets/criador.html
+++ b/assets/criador.html
@@ -20,11 +20,14 @@
                             <img src="imgs/algemas.svg" alt="icone-algemas" class="algemasicone"> <!-- Ícone de algemas -->
                         </li>
                         <li>
-                            <a href="home.html"><span>ESCRAVIZADORES</span></a> <!-- Link para a página "ESCRAVIZADORES" -->
+                            <a href="home.html"><span>INÍCIO</span></a> <!-- Link para a página "INÍCIO" -->
                         </li>
                     </div>
                     <!-- Menu de navegação à direita -->
                     <div class="menu-2">
+                         <li>
+                            <!-- Link para a página de escravizadores -->
+                            <a href="escravziadores.html"><span>ESCRAVIZADORES</span></a>
                         <li>
                             <a href="conzientizese.html"><span>CONCIENTIZE-SE</span></a> <!-- Link para a página "CONCIENTIZE-SE" -->
                         </li>
@@ -41,6 +44,7 @@
                     <div class="icons-creator">
                         <img src="icons/github.svg" alt="github-icon"> <!-- Ícone do GitHub -->
                         <img src="icons/instagram.svg" alt="instagram-icon"> <!-- Ícone do Instagram -->
+                    </div>
                     <div><img src="imgs/creator2.png" alt="creator-picture"> <!-- Imagem do criador -->
                     </div>
                     <span class="nome-criador">Francesca</span> <!-- Nome do criador -->
