--- a/assets/conzientizese.html
+++ b/assets/conzientizese.html
@@ -31,13 +31,17 @@
                             <img src="imgs/algemas.svg" alt="icone-algemas" class="algemasicone">
                         </li>
                         <li>
-                            <!-- Link para a página "ESCRAVIZADORES" -->
-                            <a href="home.html"><span>ESCRAVIZADORES</span></a>
+                            <!-- Link para a página "INÍCIO" -->
+                            <a href="home.html"><span>INÍCIO</span></a>
                         </li>
                     </div>
                     
                     <!-- Menu à direita -->
                     <div class="menu-2">
+                        <li>
+                            <!-- Link para a página de escravizadores -->
+                            <a href="escravziadores.html"><span>ESCRAVIZADORES</span></a>
+                        </li>
                         <li>
                             <!-- Link para a página "CONCIENTIZE-SE", com a classe 'menu-ativo' para destacar a página atual -->
                             <a href="conzientizese.html" class="menu-ativo"><span>CONSCIENTIZE-SE</span></a>
