--- a/assets/criador.html
+++ b/assets/criador.html
@@ -30,7 +30,7 @@
                             <a href="escravziadores.html"><span>ESCRAVIZADORES</span></a>
                         </li>
                         <li>
-                            <a href="conzientizese.html"><span>CONCIENTIZE-SE</span></a> <!-- Link para a página "CONCIENTIZE-SE" -->
+                            <a href="conzientizese.html"><span>CONSCIENTIZE-SE</span></a> <!-- Link para a página "CONCIENTIZE-SE" -->
                         </li>
                         <li>
                             <a href="criador.html" class="menu-ativo"><span>CRIADOR</span></a> <!-- Link para a página "CRIADOR", com classe ativa -->
