--- a/assets/conscientizese.html
+++ b/assets/conscientizese.html
@@ -56,9 +56,16 @@
                 <!-- Seção de conteúdo central, com textos de conscientização -->
                 <div class="contianer-texto">
                     <!-- Exibição de textos de conscientização -->
-                    <span>varios TEXTOs de concientizacao</span>
+                    <span>O que configura o trabalho análogo à escravidão?</span>
+                    <p>Considera-se trabalho realizado em condição análoga à de escravo a que resulte das seguintes situações, quer em conjunto, quer isoladamente: a submissão de trabalhador a trabalhos forçados; a submissão de trabalhador a jornada exaustiva; a sujeição de trabalhador a condições degradantes de trabalho; a restrição da locomoção do trabalhador, seja em razão de dívida contraída, seja por meio do cerceamento do uso de qualquer meio de transporte por parte do trabalhador, ou por qualquer outro meio com o fim de retê-lo no local de trabalho; a vigilância ostensiva no local de trabalho por parte do empregador ou seu preposto, com o fim de retê-lo no local de trabalho; a posse de documentos ou objetos pessoais do trabalhador, por parte do empregador ou seu preposto, com o fim de retê-lo no local de trabalho.</p>
+                    <span>Como denunciar uma situação de trabalho análogo à escravidão?</span>
+                    <p>O Governo Federal oferece o Sistema IPE de Trabalho Escravo como canal oficial de denúncias dessas condições. Ele pode ser acessado pelo site https://ipe.sit.trabalho.gov.br/#!/</p>
+                    <span>Onde posso obter mais dados e informações sobre o trabalho análogo à escravidão?</span>
+                    <p>Instituições, entidades e organizações compromissadas com os direitos humanos coletam, organizam e divulgam periódicamente dados e informações sobre essa situação. Algumas delas são:</p>
+                    <p>O Ministério do Trabalho e Emprego: através do portal https://www.gov.br/trabalho-e-emprego/pt-br/assuntos/inspecao-do-trabalho/areas-de-atuacao/combate-ao-trabalho-escravo-e-analogo-ao-de-escravo</p>
+                    <p>O Observatório da Erradicação do Trabalho Escravo e do Tráfico de Pessoas: através do portal https://smartlabbr.org/trabalhoescravo/localidade/0?dimensao=prevalencia</p>
+                    <p>O Portal de Inspeção do Trabalho: através do portal https://sit.trabalho.gov.br/radar/</p>
                 </div>
-                
             </div>
         </div>
 
