--- a/assets/home.html
+++ b/assets/home.html
@@ -40,11 +40,11 @@
                     <div class="menu-2">
                         <li>
                             <!-- Link para a página de escravizadores -->
-                            <a href="escravziadores.html"><span>ESCRAVIZADORES</span></a>
+                            <a href="escravizadores.html"><span>ESCRAVIZADORES</span></a>
                         </li>
                         <li>
                             <!-- Link para a página de conscientização -->
-                            <a href="conzientizese.html"><span>CONSCIENTIZE-SE</span></a>
+                            <a href="conscientizese.html"><span>CONSCIENTIZE-SE</span></a>
                         </li>
                         <li>
                             <!-- Link para a página do criador -->
